# ransomware

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  justfile
.circleci/: config.yml
.github/workflows/: rust.yml
src/: cryptography.rs  files.rs  main.rs  networking.rs
victim_files/: test.txt  test.txt.encrypted
