[package]
name = "ransomware"
version = "0.1.0"
authors = ["Sam van der Kris <samvdkris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cryptography
sodiumoxide = "0.2.5"
x25519-dalek = "0.6.0"
rand_core = "0.5.1"

# Networking
reqwest = { version="0.10.1", features=["blocking"] }
tokio = { version="0.2.10", features=["full"] }

# Other
base64 = "0.11.0"