[package]
name = "ransomware"
version = "0.1.0"
authors = ["Julia van der Kris <julia@juuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuulia.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cryptography
sodiumoxide = "0.2"

# Networking
reqwest = { version="0.11", features=["blocking", "json"] }
tokio = { version="1.13", features=["full"] }

# Other
base64 = "0.13"
uuid = { version="0.8", features=["v4"] }


[profile.release]
opt-level = "z"
lto = "thin"
panic = "abort"
codegen-units = 1
